--- a/css/flappy.css
+++ b/css/flappy.css
@@ -28,13 +28,36 @@ body {
     min-height: 100%;
 }
 
+.grid {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    min-height: 100%;
+}
+
+
 
 [wm-flappy] {
-    position: relative;
+    position: absolute;
+    top: 15%;
+    left: 0%;
     border: 5px solid dodgerblue;
-    height: 700px;
-    width: 1200px;
+    height: 450px;
+    width: 800px;
     margin: 15px;
+    background-color: deepskyblue;
+    overflow: hidden;
+}
+
+[configuracao] {
+    position: absolute;
+    top: 15%;
+    right: 0%;
+    border: 5px solid dodgerblue ;
+    height: 450px;
+    width: 500px;
+    margin: 15px;
+    align-items: center;
     background-color: deepskyblue;
     overflow: hidden;
 }
